--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </style>
   </head>
   <body>
-    <h1>Source-cery ✨</h1>
+    <h1>SourceCery ✨</h1>
 
     <div class="controls-bar">
       <div class="control-group">
@@ -269,6 +269,9 @@
         <label>Tooltip Width:</label>
         <button id="tooltip-decrease">-</button>
         <button id="tooltip-increase">+</button>
+      </div>
+      <div class="control-group">
+        <button id="clear-button">Clear</button>
       </div>
     </div>
 
@@ -298,7 +301,7 @@
       const pmidCache = {};
       let debounceTimer;
       const masterRegex =
-        /(\\cite[a-zA-Z]*?\{[^}]+\})|(PMID:?\s*\d+)/gi;
+        /(\\cite[a-zA-Z]*?\{[^}]+\})|(PMIDs?:?\s*\d+([;,\s]+\d+)*)/gi;
 
       // --- Core Citation Logic ---
       const parseAndRenderCitations = async () => {
@@ -468,6 +471,7 @@
       const fontDecreaseBtn = document.getElementById("font-decrease");
       const tooltipIncreaseBtn = document.getElementById("tooltip-increase");
       const tooltipDecreaseBtn = document.getElementById("tooltip-decrease");
+      const clearButton = document.getElementById("clear-button");
 
       const themeClasses = [
         "theme-default-light",
@@ -531,6 +535,11 @@
         }
       });
 
+      clearButton.addEventListener("click", () => {
+        latexInput.value = "";
+        citationsOutput.innerHTML = "";
+      });
+
       function loadPreferences() {
         let themeToApply =
           localStorage.getItem("sourcecery-theme") || "theme-nord-dark";
@@ -566,4 +575,3 @@
     </script>
   </body>
 </html>
-
